@@ -1,3 +1,15 @@
+2006-12-07  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* [w3m-dev 04184] automatic uncompression in downloading
+	* rc.c: Add `AutoUncompress'.
+	  (params3): Ditto.
+	* fm.h: Add `AutoUncompress'.
+	* file.c (loadGeneralFile): Check `AutoUncompress' when uncompress
+	  data.
+	  (HTMLlineproc2body): Ditto.
+	* po/w3m.pot: Add new message for `AutoUncompress'.
+	* po/ja.po: ditto.
+
 2006-12-10  Hiroyuki Ito <ZXB01226@nifty.com>
 
 	* [w3m-dev 04159] Re: Is this mailing list still alive?
